@@ -7,13 +7,12 @@ Authors@R: c(person(given = "Daniel", family = "Fischer", role = c("aut","cre"),
              person(given = "Anu", family = "Sironen", role = "aut"))
 Author: Daniel Fischer [aut, cre], Anu Sironen [aut]
 Maintainer: Daniel Fischer <daniel.fischer@luke.fi>
-Depends: R (>= 3.2)
+Depends: R (>= 3.2), GenomicTools (>= 0.2.8),
 biocViews:
 Imports: bamsignals (>= 1.10.0),
          Biostrings (>= 2.46.0),
          data.table (>=1.11.4),
          GenomicRanges (>= 1.30.3),
-         GenomicTools (>= 0.2.1),
          httr (>= 1.3.1), 
          IRanges (>= 2.12.0),
          KernSmooth (>=2.23-15),
