@@ -1,4 +1,7 @@
 exportFA <- function(fa, file=NULL){
+
+  .Deprecated("GenomicTools.fileHandler::exportFA", package="GenomicTools", msg="I/O Functions will be collected from now on in a new package GenomicTools.fileHandler")
+  
   faNames <- names(fa)
   if(is.null(file)){
     file <- deparse(substitute(fa))
