@@ -1,4 +1,7 @@
 `print.fq` <- function(x, n=2, seq.out=50, ...){
+  
+  .Deprecated("GenomicTools.fileHandler::print.fq", package="GenomicTools", msg="I/O Functions will be collected from now on in a new package GenomicTools.fileHandler")
+  
   if(!is.numeric(n)) stop("The argument n has to be numeric.")
   if(n>length(x)){
     n <- length(x)
