@@ -1,5 +1,7 @@
 summary.fq <- function(object, ...){
 
+  .Deprecated("GenomicTools.fileHandler::summary.fq", package="GenomicTools", msg="I/O Functions will be collected from now on in a new package GenomicTools.fileHandler")
+  
    nCharObj <- nchar(object)
    cat("Summary of fq object\n")
    cat("--------------------\n")
